renaming stylesheet id to avoid overlapping styles on production

--- a/dashboard/app/assets/stylesheets/signup.scss
+++ b/dashboard/app/assets/stylesheets/signup.scss
@@ -1,6 +1,6 @@
 @import "color";
 
-#signup {
+#newSignupFlow {
   display: flex;
   flex-direction: column;
   align-items: center;
